<resources>

    <string name="app_name">MultiSolver</string>
    <string name="profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Merhaba boş fragment</string>
    <string name="error_title">Sıfırlamak istediğinize emin misiniz?</string>
    <string name="dummy_text">Lorem Ipsum, baskı ve tip belirleme endüstrisinin basit bir sahte metnidir</string>
    <string name="okay">Tamam</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="title_activity_maps_fly">Harita</string>
    <string name="title_activity_maps">Harita</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="sign_in">Giriş</string>
    <string name="are_you_new">Yeni Misin?</string>
    <string name="sign_up_now">Şimdi Kayıt Ol</string>
    <string name="name">İsim</string>
    <string name="surname">Soy İsim</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="main_title">Ana Başlık</string>
    <string name="subtitle">Alt Başlık</string>
    <string name="explanation">Buraya Yazabilirsiniz</string>
    <string name="fragment_usersguide_title">Bu Uygulama ile Yapabilecekleriniz</string>
    <string name="user_guide_first_feature">1-) AHP / TOPSIS</string>
    <string name="user_guide_third_feature">3-) Geliştirme Aşamasında</string>
    <string name="user_guide_second_feature">2-) Gezgin Satıcı Problemi</string>
    <string name="user_guide_explanation">Uygulama ve neler yapabileceği hakkında daha fazla bilgi için lütfen butona dokunun.</string>
    <string name="user_guide_button">Kullanım Kılavuzu</string>
    <string name="todo">Yapılacaklar Listesi</string>
    <string name="library_search">Kütüphanede Ara</string>
    <string name="premium">Premium</string>
    <string name="contact_email">multisolvermko@gmail.com</string>
    <string name="bronze_premium">Bronz</string>
    <string name="bronze_premium_explanation">Beş kriterli AHP ve TOPSIS içermektedir</string>
    <string name="_15">15</string>
    <string name="gold_premium">Altın</string>
    <string name="gold_premium_explanation">Yedi kriterli AHP ve TOPSIS içermektedir</string>
    <string name="_30">30</string>
    <string name="silver_premium">Gümüş</string>
    <string name="silver_premium_explanation">Altı kriterli AHP ve TOPSIS içermektedir</string>
    <string name="_20">20</string>
    <string name="premium_more_information">Daha fazla bilgi için lütfen bizimle iletişime geçin.</string>
    <string name="friends">Arkadaşlar</string>
    <string name="change_password">Şifreyi Değiştir</string>
    <string name="settings">Ayarlar</string>
    <string name="logout">Çıkış Yap</string>
    <string name="by_mko">MKO</string>
    <string name="users_search">Multisolver kullanıcılarını arayın.</string>
    <string name="contactus_explanation">Herhangi bir sorununuz varsa, \n Lütfen bizimle iletişime geçin</string>
    <string name="metehan_bolat">Metehan BOLAT</string>
    <string name="metehan_phone">Telefon Numarası : 0 (506) 099 37 72</string>
    <string name="metehan_email">Email : multisolvermko@gmail.com</string>
    <string name="oguz_bedel">Oğuz BEDEL</string>
    <string name="oguz_email">Email : multisolvermko@gmail.com</string>
    <string name="oguz_phone">Telefon Numarası : 0 (507) 859 72 39</string>
    <string name="kutay_email">Email : multisolvermko@gmail.com</string>
    <string name="kutay_cetinkurt">Kutay ÇETİNKURT</string>
    <string name="kutay_phone">Telefon Numarası : 0 (555) 857 22 18</string>
    <string name="more_information">Daha Fazla Bilgi İçin… </string>
    <string name="click">Dokunun!</string>
    <string name="add_data">Veri ekle</string>
    <string name="result">Sonuç:</string>
    <string name="enter_value">Değer girin</string>
    <string name="best_result">En iyi sonuç:</string>
    <string name="calculate">Hesapla</string>
    <string name="reset">Sıfırla</string>
    <string name="airway">Hava yolu</string>
    <string name="highway">Kara yolu</string>
    <string name="entry_salesman_question">Kaç şehir seçeceksiniz?</string>
    <string name="travelling_salesman_problems">Gezgin Satıcı Problemleri</string>
    <string name="manuel">Manuel</string>
    <string name="automatic">Otomatik</string>
    <string name="salesman_problem_explanation">Daha fazla bilgi için lütfen kartlara uzun basın.</string>
    <string name="criteria_1">Kriter 1</string>
    <string name="criteria_2">Kriter 2</string>
    <string name="criteria_3">Kriter 3</string>
    <string name="criteria_4">Kriter 4</string>
    <string name="_1">1</string>
    <string name="value">Değer</string>
    <string name="complete_table">Tabloyu Tamamla</string>
    <string name="information">Bilgi</string>
    <string name="four_ahp_explanation">Değer yazan kutucuğa kriterleriniz için değerler girebilirsiniz. Kalan boşlukları hesaplamak için Tabloyu Tamamla düğmesine dokunun.</string>
    <string name="weight_1">Ağırlık 1</string>
    <string name="weight_2">Ağırlık 2</string>
    <string name="weight_3">Ağırlık 3</string>
    <string name="weight_4">Ağırlık 4</string>
    <string name="min">Min</string>
    <string name="parameter_1">Parametre 1</string>
    <string name="parameter_2">Parametre 2</string>
    <string name="parameter_3">Parametre 3</string>
    <string name="parameter_4">Parametre 4</string>
    <string name="_1_data">1. Veri</string>
    <string name="_2_data">2. Veri</string>
    <string name="_3_data">3. Veri</string>
    <string name="_4_data">4. Veri</string>
    <string name="best_alternate">En iyi alternatif:</string>
    <string name="delete_note">Notu Sil</string>
    <string name="delete_note_explanation">Bu notu silmek istediğinize emin misiniz?</string>
    <string name="delete">Sil</string>
    <string name="cancel">İptal</string>
    <string name="old_password">Eski Şifre</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="change">Değiştir</string>
    <string name="manuel_card_explanation">Herhangi bir boyutta oluşturacağınız uzaklık matrisine şekildeki gibi doğru değerleri simetrik olarak giriniz. Girdiğiniz ilk değer matris boyutunu oluşturur. Ardından, 0 değerinden başlayarak mevcut veri kümenizi tamamlamanız gerekir.</string>
    <string name="Hello">Merhaba!</string>
    <string name="premium_popup_explanation">Premiumun ayrıcalıklı özelliklerinden yararlanmak ister misiniz?</string>
    <string name="premium_Buy">Premiumu şimdi satın alın</string>
    <string name="fill_email">Lütfen email alanını doldurunuz</string>
    <string name="fill_email_password">Lütfen email ve şifre alanını doldurunuz</string>
    <string name="un_email_wr_password">Geçersiz e-posta veya yanlış şifre</string>
    <string name="please_enter_value">Lütfen değer giriniz</string>
    <string name="exceeded_the_size">Boyutu aştınız</string>
    <string name="please_enter_number_of_location">Lütfen konum sayısını giriniz</string>
    <string name="you_can_t_enter_more_data">Daha fazla veri giremezsiniz</string>
    <string name="you_can_not_a_enter_value_after_calculation">Hesaplamadan sonra değer giremezsiniz</string>
    <string name="fill_password">Lütfen şifre alanını doldurunuz</string>
    <string name="fill_passwords">Lütfen şifre alanlarınızı doldurunuz</string>
    <string name="blocked">Engellendiniz. Lütfen daha sonra tekrar deneyiniz</string>
    <string name="successful">Başarılı</string>
    <string name="enter_new_password">Lütfen yeni bir şifre giriniz.</string>
    <string name="enter_old_password">Lütfen eski şifrenizi giriniz</string>
    <string name="changing_canceled">Şifre değiştirme işlemi iptal edildi</string>
    <string name="wrong_password">Hatalı şifre</string>
    <string name="longer_six">Şifreniz 6 karakterden az olamaz</string>
    <string name="please_fill_the_blank_fields">Lütfen boş alanları doldurunuz</string>
    <string name="please_enter_an_available_email_address">Lütfen geçerli bir email giriniz</string>
    <string name="name_surname_password">Lütfen ad, soyad ve şifre alanlarını doldurunuz</string>
    <string name="email_name">Lütfen ad ve email alanlarını doldurunuz</string>
    <string name="surname_email">Lütfen soyadı ve e-posta alanlarını doldurunuz</string>
    <string name="name_fields">Lütfen ad alanını doldurunuz</string>
    <string name="surname_email_password">Lütfen soyadı, email ve şifre alanlarını doldurunuz</string>
    <string name="name_surname">Lütfen ad ve soyad alanlarını doldurunuz</string>
    <string name="must_longer_six">Şifreniz altı karakterden uzun olmalıdır</string>
    <string name="name_surname_email">Lütfen ad, soyad ve email alanlarını doldurunuz</string>
    <string name="name_password">Lütfen isim ve şifre alanlarını doldurunuz</string>
    <string name="surname_password">Lütfen soyadı ve şifre alanlarını doldurunuz</string>
    <string name="surname_fields">Lütfen soyadı alanını doldurunuz</string>
    <string name="name_email_password">Lütfen ad, email ve şifre alanlarını doldurunuz</string>
    <string name="notifications">Bildirimler</string>
    <string name="library">Kütüphane</string>
    <string name="users">Kullanıcılar</string>
    <string name="problems">Akıllı Çözücü</string>
    <string name="decision_support_systems">Çok Kriterli Karar Verme</string>
    <string name="other">Diğer</string>
    <string name="contact_us">İletişim</string>
    <string name="user_guide">Kullanım Kılavuzu</string>
    <string name="log_out">Çıkış yap</string>
    <string name="topsis">TOPSIS</string>
    <string name="ahp">AHP</string>
    <string name="more">Daha fazla</string>
    <string name="automatic_card_dialog_explanation_1">Açılan sonraki ekranda bayinizin bulunduğu şehir de dahil olmak üzere sahip olacağınız toplam şehir sayısının değerini girin.</string>
    <string name="automatic_card_dialog_explanation_2">Eğer teslim edeceksen:</string>
    <string name="automatic_card_dialog_explanation_3">Eğer yol taşımacılığı için hesap yapılacaksa => Kara yolu</string>
    <string name="automatic_card_dialog_explanation_4">Eğer hava taşımacılığı için hesap yapılacaksa => Hava yolu</string>
    <string name="automatic_card_dialog_explanation_5">Butona Tıklayın.</string>
    <string name="automatic_card_dialog_explanation_6">Google Haritalar\'ı kullanarak, gitmek istediğiniz yerleri sıralamadan bağımsız olarak harita üzerinde işaretleyin. Son işaretlemeden sonra kara yolu için hesaplama otomatik olarak başlayacak, hava yolu için Hesapla düğmesi etkinleştirilecektir.</string>

</resources>