<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

    <item android:id="@+id/menuNotification"
        android:icon="@drawable/notification"
        android:title="@string/notifications"/>

    <item android:id="@+id/menuLibrary"
        android:icon="@drawable/book"
        android:title="@string/library"/>

    <item android:id="@+id/menuUsers"
        android:icon="@drawable/profile"
        android:title="@string/users"/>

    <item android:id="@+id/menuProblems"
        android:icon="@drawable/problem"
        android:title="@string/problems"/>

    <item android:id="@+id/menuTopsis"
        android:icon="@drawable/topsis"
        android:title="@string/decision_support_systems"/>


    <item android:title="@string/other"
        android:id="@+id/others">

        <menu>
            <item android:id="@+id/menuSettings"
                android:icon="@drawable/set2"
                android:title="@string/settings"/>

            <item android:id="@+id/menuContactUs"
                android:icon="@drawable/support"
                android:title="@string/contact_us" />

            <item android:id="@+id/menuUserGuide"
                android:icon="@drawable/icon4"
                android:title="@string/user_guide"/>

            <item android:id="@+id/menuLogout"
                android:icon="@drawable/logout"
                android:title="@string/log_out"/>

        </menu>

    </item>

</menu>